Update price
